add index.html design

--- a/projectLIT/mainapp/templates/mainapp/index.html
+++ b/projectLIT/mainapp/templates/mainapp/index.html
@@ -17,7 +17,16 @@
     </div>
 {%  endblock %}
 {%  block content %}
+    <div class="content-news-beginning">
+    <div class="content-news-beginning-inside">
+        <p class="content-news-beginning-header">Ready to understand your favourite artists better?</p>
+    <button class="content-news-beginning-button-register">Create an account</button>
+     <button class="content-news-beginning-button-login">Log in</button>
+    </div>
+
+    </div>
     <div class="content-news">
+
     <div class="content-news-header">
      <a class="welcome-block-href" href="">
       <div class="welcome-block">
