--- a/projectLIT/mainapp/templates/mainapp/account.html
+++ b/projectLIT/mainapp/templates/mainapp/account.html
@@ -11,7 +11,7 @@
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
             <li class="log-out-element"><a class="menu-element-href" href="{% url 'register' %}">Log out</a></li>
             <li class="menu-element-pressed"><a href="{% url 'account' %}">IRENE</a></li>
-            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/ellipse.png' %}" alt="photo"></a></li>
+            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
     </div>
@@ -21,7 +21,7 @@
    <div class="account-content-inside">
       <div class="account-information-all">
        <div class="account-picture">
-           <img class="profile-picture" src="{% static 'img/ellipse.svg' %}" alt="profile picture">
+           <img class="profile-picture" src="{% static 'img/account_photo.png' %}" alt="profile picture">
        </div>
        <div class="account-information">
            <div class="account-information-main">
