--- a/projectLIT/mainapp/templates/mainapp/playlist.html
+++ b/projectLIT/mainapp/templates/mainapp/playlist.html
@@ -12,7 +12,7 @@
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
             <li class="log-out-element"><a class="menu-element-href" href="{% url 'register' %}">Log out</a></li>
             <li class="menu-element-name"><a href="{% url 'account' %}">IRENE</a></li>
-            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/ellipse.png' %}" alt="photo"></a></li>
+            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
     </div>
@@ -45,7 +45,7 @@
                <a href="" class="song-writer">Wham!</a>
                </div>
                <div class="song-settings">
-               <div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div>
+                   <a href="" class="add-to-favourite-heart"><div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div></a>
                <div class="song-time">4:26</div>
                <div class="points">
                   <a href="#" onclick="manager(event)" class="song-points" id = "song-points-press">・・・<div id='song-window-2' class="song-window">
@@ -64,7 +64,7 @@
                <a href="" class="song-writer">Wham!</a>
                </div>
                <div class="song-settings">
-               <div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div>
+                   <a href="" class="add-to-favourite-heart"><div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div></a>
                <div class="song-time">4:26</div>
                <div class="points">
                   <a href="#" onclick="manager(event)" class="song-points" id = "song-points-press">・・・<div id='song-window-2' class="song-window">
@@ -83,7 +83,7 @@
                <a href="" class="song-writer">Wham!</a>
                </div>
                <div class="song-settings">
-               <div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div>
+                   <a href="" class="add-to-favourite-heart"><div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div></a>
                <div class="song-time">4:26</div>
                <div class="points">
                   <a href="#" onclick="manager(event)" class="song-points" id = "song-points-press">・・・<div id='song-window-2' class="song-window">
@@ -102,7 +102,7 @@
                <a href="" class="song-writer">Wham!</a>
                </div>
                <div class="song-settings">
-               <div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div>
+                   <a href="" class="add-to-favourite-heart"><div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div></a>
                <div class="song-time">4:26</div>
                <div class="points">
                   <a href="#" onclick="manager(event)" class="song-points" id = "song-points-press">・・・<div id='song-window-2' class="song-window">
@@ -121,7 +121,7 @@
                <a href="" class="song-writer">Wham!</a>
                </div>
                <div class="song-settings">
-               <div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div>
+                   <a href="" class="add-to-favourite-heart"><div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div></a>
                <div class="song-time">4:26</div>
                <div class="points">
                   <a href="#" onclick="manager(event)" class="song-points" id = "song-points-press">・・・<div id='song-window-2' class="song-window">
@@ -140,7 +140,7 @@
                <a href="" class="song-writer">Wham!</a>
                </div>
                <div class="song-settings">
-               <div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div>
+                   <a href="" class="add-to-favourite-heart"><div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div></a>
                <div class="song-time">4:26</div>
                <div class="points">
                   <a href="#" onclick="manager(event)" class="song-points" id = "song-points-press">・・・<div id='song-window-2' class="song-window">
@@ -159,7 +159,7 @@
                <a href="" class="song-writer">Wham!</a>
                </div>
                <div class="song-settings">
-               <div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div>
+                   <a href="" class="add-to-favourite-heart"><div class="add-to-favourites"><img class="add-to-favourites" src="{% static 'img/heart.svg' %}" alt=""></div></a>
                <div class="song-time">4:26</div>
                <div class="points">
                   <a href="#" onclick="manager(event)" class="song-points" id = "song-points-press">・・・<div id='song-window-2' class="song-window">
@@ -177,3 +177,5 @@
 
 {% endblock %}
 
+{% block footer %}
+{%  endblock %}
