--- a/projectLIT/mainapp/templates/mainapp/playlists.html
+++ b/projectLIT/mainapp/templates/mainapp/playlists.html
@@ -11,13 +11,14 @@
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
             <li class="log-out-element"><a class="menu-element-href" href="{% url 'register' %}">Log out</a></li>
             <li class="menu-element-name"><a href="{% url 'account' %}">IRENE</a></li>
-            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/ellipse.png' %}" alt="photo"></a></li>
+            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
     </div>
     {% endblock %}
 {% block content %}
     <div class="content">
+
         <div class="playlists">
             <div class="playlists-inside">
                <a class="playlist-href" href="/playlist/">
