--- a/projectLIT/mainapp/templates/mainapp/base.html
+++ b/projectLIT/mainapp/templates/mainapp/base.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     {% block css %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %} ">
     {% endblock %}
     <link rel="preconnect" href="https://fonts.gstatic.com"> 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
@@ -21,5 +21,8 @@
 {% endblock %}
         {% block content %}
         {% endblock %}
+{%  block footer %}
+
+{% endblock %}
 </body>
 </html>
