--- a/projectLIT/mainapp/templates/mainapp/register.html
+++ b/projectLIT/mainapp/templates/mainapp/register.html
@@ -11,7 +11,7 @@
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
             <li class="log-out-element"><a class="menu-element-pressed" href="{% url 'register' %}">Log out</a></li>
             <li class="menu-element-name"><a href="{% url 'account' %}">IRENE</a></li>
-            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/ellipse.png' %}" alt="photo"></a></li>
+            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
     </div>
@@ -37,7 +37,7 @@
     <input type="password" name="lname" value=""><br>
     <label for="lname">Age:</label><br>
     <input type="text" name="lname" value=""><br>
-    <input class="regiter_button" type="submit" value="Register">
+    <input class="register_button" type="submit" value="Register">
   </form>
   <a href="{% url 'signin' %}">
     <p>Already have an account?</p>
