--- a/projectLIT/mainapp/templates/mainapp/signin.html
+++ b/projectLIT/mainapp/templates/mainapp/signin.html
@@ -11,7 +11,7 @@
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
             <li class="log-out-element"><a class="menu-element-pressed" href="{% url 'register' %}">Log out</a></li>
             <li class="menu-element-name"><a href="{% url 'account' %}">IRENE</a></li>
-            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/ellipse.png' %}" alt="photo"></a></li>
+            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
     </div>
