--- a/projectLIT/authapp/templates/authapp/base.html
+++ b/projectLIT/authapp/templates/authapp/base.html
@@ -1,28 +1,33 @@
-{% load static %}
 <!DOCTYPE html>
-<html lang="en">
+{% load staticfiles %}
+<html>
 <head>
-    <meta charset="UTF-8">
-    {% block css %}
-    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %} ">
-    {% endblock %}
-    <link rel="preconnect" href="https://fonts.gstatic.com"> 
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <title>
+	<meta charset="utf-8">
+	<title>
         {% block title %}
             {{ title|title }}
         {% endblock %}
     </title>
+    {% block css %}
+        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
+        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %} ">
+{#        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">#}
+    {% endblock %}
     {% block js %}
+
     {% endblock %}
 </head>
 <body>
-{%  block menu %}
-{% endblock %}
-        {% block content %}
-        {% endblock %}
-{%  block footer %}
+	<div class="container">
+        <div class="login">
+            <div class="h2 text-center head">
+                Аутентификация
+            </div>            
+            
+            {% block content %}
 
-{% endblock %}
+            {% endblock %}
+        </div>
+	</div>
 </body>
 </html>
