--- a/projectLIT/authapp/templates/authapp/base.html
+++ b/projectLIT/authapp/templates/authapp/base.html
@@ -1,33 +1,28 @@
+{% load static %}
 <!DOCTYPE html>
-{% load staticfiles %}
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>
+    <meta charset="UTF-8">
+    {% block css %}
+    <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %} ">
+    {% endblock %}
+    <link rel="preconnect" href="https://fonts.gstatic.com"> 
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
+    <title>
         {% block title %}
             {{ title|title }}
         {% endblock %}
     </title>
-    {% block css %}
-        <link rel="stylesheet" type="text/css" href="{% static 'css/bootstrap.min.css' %}">
-        <link rel="stylesheet" type="text/css" href="{% static 'css/main.css' %} ">
-{#        <link rel="stylesheet" href="{% static 'fonts/font-awesome/css/font-awesome.css' %}">#}
-    {% endblock %}
     {% block js %}
-
     {% endblock %}
 </head>
 <body>
-	<div class="container">
-        <div class="login">
-            <div class="h2 text-center head">
-                Аутентификация
-            </div>            
-            
-            {% block content %}
+{%  block menu %}
+{% endblock %}
+        {% block content %}
+        {% endblock %}
+{%  block footer %}
 
-            {% endblock %}
-        </div>
-	</div>
+{% endblock %}
 </body>
 </html>
