--- a/projectLIT/authapp/templates/authapp/edit.html
+++ b/projectLIT/authapp/templates/authapp/edit.html
@@ -9,7 +9,7 @@
         <input class="form-control" type="submit" value="сохранить">
     </form>
     <button class="btn btn-round form-control last">
-        <a href="{% url 'main' %}" class="">
+        <a href="{% url 'mainapp:main' %}" class="">
             на главную
         </a>
     </button>
