--- a/projectLIT/mainapp/templates/mainapp/index.html
+++ b/projectLIT/mainapp/templates/mainapp/index.html
@@ -5,13 +5,13 @@
     <div class="menu">
        <div class="menu-elements">
         <ul class="menu-list">
-            <li class="menu-element"><a class="menu-element-pressed" href="{% url 'main' %}">News</a></li>
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'playlists' %}">Playlists</a></li>
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'accounts' %}">Connected accounts</a></li>
+            <li class="menu-element"><a class="menu-element-pressed" href="{% url 'mainapp:main' %}">News</a></li>
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:playlists' %}">Playlists</a></li>
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:accounts' %}">Connected accounts</a></li>
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
-            <li class="log-out-element"><a class="menu-element-href" href="{% url 'register' %}">Log out</a></li>
-            <li class="menu-element-name"><a href="{% url 'account' %}">IRENE</a></li>
-            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
+            <li class="log-out-element"><a class="menu-element-href" href="{% url 'auth:logout' %}">Log out</a></li>
+            <li class="menu-element-name"><a href="{% url 'mainapp:account' %}">IRENE</a></li>
+            <li class="photo-element"><a href="{% url 'mainapp:account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
     </div>
@@ -20,8 +20,8 @@
     <div class="content-news-beginning">
     <div class="content-news-beginning-inside">
         <p class="content-news-beginning-header">Ready to understand your favourite artists better?</p>
-        <a href="{% url 'register' %}"><button class="content-news-beginning-button-register">Create an account</button></a>
-        <a href="{% url 'signin' %}"><button class="content-news-beginning-button-login">Log in</button></a>
+        <a href="{% url 'auth:register' %}"><button class="content-news-beginning-button-register">Create an account</button></a>
+        <a href="{% url 'auth:login' %}"><button class="content-news-beginning-button-login">Log in</button></a>
     </div>
     </div>
     <div class="content-news">
