--- a/projectLIT/mainapp/templates/mainapp/playlists.html
+++ b/projectLIT/mainapp/templates/mainapp/playlists.html
@@ -5,13 +5,13 @@
      <div class="menu">
        <div class="menu-elements">
         <ul class="menu-list">
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'main' %}">News</a></li>
-            <li class="menu-element"><a class="menu-element-pressed" href="{% url 'playlists' %}">Playlists</a></li>
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'accounts' %}">Connected accounts</a></li>
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:main' %}">News</a></li>
+            <li class="menu-element"><a class="menu-element-pressed" href="{% url 'mainapp:playlists' %}">Playlists</a></li>
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:accounts' %}">Connected accounts</a></li>
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
-            <li class="log-out-element"><a class="menu-element-href" href="{% url 'register' %}">Log out</a></li>
-            <li class="menu-element-name"><a href="{% url 'account' %}">IRENE</a></li>
-            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
+            <li class="log-out-element"><a class="menu-element-href" href="{% url 'auth:logout' %}">Log out</a></li>
+            <li class="menu-element-name"><a href="{% url 'mainapp:account' %}">IRENE</a></li>
+            <li class="photo-element"><a href="{% url 'mainapp:account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
     </div>
