--- a/projectLIT/mainapp/templates/mainapp/register.html
+++ b/projectLIT/mainapp/templates/mainapp/register.html
@@ -5,13 +5,13 @@
     <div class="menu">
        <div class="menu-elements">
         <ul class="menu-list">
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'main' %}">News</a></li>
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'playlists' %}">Playlists</a></li>
-            <li class="menu-element"><a class="menu-element-href" href="{% url 'accounts' %}">Connected accounts</a></li>
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:main' %}">News</a></li>
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:playlists' %}">Playlists</a></li>
+            <li class="menu-element"><a class="menu-element-href" href="{% url 'mainapp:accounts' %}">Connected accounts</a></li>
             <li class="menu-element"><a href="#" class="menu-element-href">Settings</a></li>
-            <li class="log-out-element"><a class="menu-element-pressed" href="{% url 'register' %}">Log out</a></li>
-            <li class="menu-element-name"><a href="{% url 'account' %}">IRENE</a></li>
-            <li class="photo-element"><a href="{% url 'account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
+            <li class="log-out-element"><a class="menu-element-pressed" href="{% url 'auth:logout' %}">Log out</a></li>
+            <li class="menu-element-name"><a href="{% url 'mainapp:account' %}">IRENE</a></li>
+            <li class="photo-element"><a href="{% url 'mainapp:account' %}" ><img src="{% static 'img/gramophone.png' %}" alt="photo"></a></li>
         </ul>
     </div>
     </div>
@@ -39,7 +39,7 @@
     <input type="text" name="lname" value=""><br>
     <input class="register_button" type="submit" value="Register">
   </form>
-  <a href="{% url 'signin' %}">
+  <a href="{% url 'auth:signin' %}">
     <p>Already have an account?</p>
     <p>Sign in</p>
   </a>
